将CSV数据存储拆分成单独的表，降低Chart表的压力
